[Travis CI] bring back allow_failures on JDK 11

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ matrix:
       env: NODE_VERSION=lts/*
     - jdk: openjdk11
       env: NODE_VERSION=lts/*
+  allow_failures:
+    - jdk: openjdk11
 
 addons:
   apt:
